[package]
name = "wissol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wissol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang =  { version = "0.29.0", features = ["init-if-needed"] }
mpl-token-metadata = "4.0.0"
anchor-spl = "0.29.0"